--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "confluent-kafka>=2.11.1",
     "pandas>=2.3.2",
     "psycopg2-binary>=2.9.10",
+    "readerwriterlock>=1.0.9",
     "redis>=6.4.0",
     "sqlalchemy>=2.0.43",
     "tqdm>=4.67.1",
