--- a/.env
+++ b/.env
@@ -9,5 +9,5 @@ REDIS_HOST=100.73.71.117
 REDIS_PORT=6378
 REDIS_DB=1
 REDIS_PASSWORD=yEuyMR52db3HTJPN2h
-REDIS_USER=xbrain_developer
+REDIS_USER=default
 KAFKA_SERVERS=100.73.71.117:29092
