--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pydantic>=2.12.3",
     "readerwriterlock>=1.0.9",
     "redis>=6.4.0",
+    "requests>=2.32.5",
     "sqlalchemy>=2.0.43",
     "tqdm>=4.67.1",
 ]
