--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.13"
 dependencies = [
+    "cachetools>=6.2.1",
     "confluent-kafka>=2.11.1",
     "pandas>=2.3.2",
     "psycopg2-binary>=2.9.10",
