--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pandas>=2.3.2",
     "psycopg2-binary>=2.9.10",
     "pydantic>=2.12.3",
+    "quantstats>=0.0.77",
     "readerwriterlock>=1.0.9",
     "redis>=6.4.0",
     "requests>=2.32.5",
