--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "dotenv>=0.9.9",
     "ipython>=9.6.0",
     "pandas>=2.3.2",
+    "plotly>=6.3.1",
     "psycopg2-binary>=2.9.10",
     "pydantic>=2.12.3",
     "quantstats>=0.0.77",
