--- a/.env
+++ b/.env
@@ -1,13 +1,15 @@
 LOG_LEVEL=DEBUG
 PRODUCT_MODE=false
-POSTGRES_USER=xbrain_developer
-POSTGRES_PASSWORD=yEuyMR52db3HTJPN2h
-POSTGRES_DB=xno_ai_data
+POSTGRES_USER=developer
+POSTGRES_PASSWORD=Zpelozjei8cKjg2Q
+POSTGRES_DB=
 POSTGRES_HOST=100.73.71.117
-POSTGRES_PORT=5432
+POSTGRES_PORT=55432
+# The new redis server configuration
 REDIS_HOST=100.73.71.117
-REDIS_PORT=6378
-REDIS_DB=1
-REDIS_PASSWORD=yEuyMR52db3HTJPN2h
+REDIS_PORT=56379
+REDIS_DB=11
+REDIS_PASSWORD=Zpelozjei8cKjg2Q
 REDIS_USER=default
-KAFKA_SERVERS=100.73.71.117:29092
+# New kafka server configuration
+KAFKA_SERVERS=100.73.71.117:59092
