--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ dependencies = [
     "confluent-kafka>=2.11.1",
     "dotenv>=0.9.9",
     "ipython>=9.6.0",
+    "msgspec>=0.20.0",
+    "orjson>=3.11.4",
     "pandas>=2.3.2",
     "plotly>=6.3.1",
     "psycopg2-binary>=2.9.10",
